Linking lines of texts to complete works.
